--- a/project_0/game2.ipynb
+++ b/project_0/game2.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean attempts to pretict numeber: 100\n"
+      "Mean attempts to predict numeber: 5\n"
      ]
     }
    ],
