--- a/Current_tasks/Python_13.ipynb
+++ b/Current_tasks/Python_13.ipynb
@@ -631,7 +631,7 @@
     ");\n",
     "\n",
     "heatmap = sns.heatmap(data=score_table, cmap='YlGnBu')\n",
-    "heatmap.set_title('Heat of CreditScoreCat/Tenure')"
+    "heatmap.set_title('Heat of CreditScoreCat/Tenure');"
    ]
   },
   {
