--- a/Current_tasks/EDA_1.ipynb
+++ b/Current_tasks/EDA_1.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import statistics\n",
     "from pandas_profiling import ProfileReport"
    ]
   },
@@ -24204,6 +24205,169 @@
    "source": [
     "profile = ProfileReport(wd, title=\"Wine Pandas Profiling Report\")\n",
     "profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wdc = pd.read_csv('data\\wine_cleared.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 129971 entries, 0 to 129970\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                 Non-Null Count   Dtype  \n",
+      "---  ------                 --------------   -----  \n",
+      " 0   Unnamed: 0             129971 non-null  int64  \n",
+      " 1   country                129908 non-null  object \n",
+      " 2   description            129971 non-null  object \n",
+      " 3   designation            129971 non-null  object \n",
+      " 4   points                 129971 non-null  int64  \n",
+      " 5   price                  129971 non-null  float64\n",
+      " 6   province               129908 non-null  object \n",
+      " 7   region_1               129971 non-null  object \n",
+      " 8   taster_name            129971 non-null  object \n",
+      " 9   taster_twitter_handle  129971 non-null  object \n",
+      " 10  title                  129971 non-null  object \n",
+      " 11  variety                129970 non-null  object \n",
+      " 12  winery                 129971 non-null  object \n",
+      "dtypes: float64(1), int64(2), object(10)\n",
+      "memory usage: 12.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "wdc.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(wdc['points'].min())\n",
+    "display(wdc['price'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.36"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(statistics.mean(wdc['price']), 2)\n",
+    "sum(wdc['price'])/len(wdc['price'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(round(statistics.median(wdc['price']), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_price = len(wdc['price'])\n",
+    "sorted_price = sorted(wdc['price'])\n",
+    "\n",
+    "if count_price % 2: # нечетное \n",
+    "    median = sorted_price[count_price//2]\n",
+    "else:\n",
+    "    median = sum(sorted_price[count_price//2 - 1:count_price//2 + 1])/2\n",
+    "    \n",
+    "median\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.36"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(statistics.mode(wdc['price']), 2)"
    ]
   }
  ],
