--- a/Current_tasks/EDA_5.ipynb
+++ b/Current_tasks/EDA_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "2 2020-11-08  3354            25   846051"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "0.71"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "0.76"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "<Axes:xlabel='date', ylabel='cum_conversion'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "<AxesSubplot:xlabel='time(B)', ylabel='Count'>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,17 +565,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Заготовки функций по определению доверительных интервалов:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Определение доверительного интервала\n",
-    "\n",
-    "def conf_z_interval(n, x_mean, std, gamma, rnd=2):\n",
+    "# Определение доверительного интервала для среднего значения\n",
+    "# с использованием z_crit\n",
+    "def conf_z_interval(n, x_mean, std, gamma=0.95, rnd=2):\n",
     "    alpha = 1 - gamma\n",
     "    z_crit = -norm.ppf(alpha/2)\n",
-    "    print(f'z_crit={round(z_crit,2)}')\n",
+    "    print(f'z_crit={round(z_crit,rnd)}')\n",
     "    eps = z_crit*std/(n**0.5)\n",
     "    print('eps={}'.format(round(eps,rnd)))\n",
     "    lower_bound = x_mean - eps # левая (нижняя) граница\n",
@@ -583,21 +590,48 @@
     "    return (round(lower_bound, rnd), round(upper_bound, rnd))\n",
     "\n",
     "\n",
-    "def conf_t_interval(n, x_mean, x_std, gamma, rnd=2):\n",
+    "# с использованием t_crit\n",
+    "def conf_t_interval(n, x_mean, x_std, gamma=0.95, rnd=2):\n",
     "    k = n - 1\n",
     "    alpha = 1 - gamma\n",
     "    t_crit = -t.ppf(alpha/2, k)\n",
-    "    print(f't_crit={round(t_crit,2)}')\n",
+    "    print(f't_crit={round(t_crit,rnd)}')\n",
     "    eps = t_crit*x_std/(n**0.5)\n",
     "    print('eps={}'.format(round(eps,rnd)))\n",
     "    lower_bound = x_mean - eps # левая (нижняя) граница\n",
     "    upper_bound = x_mean + eps # правая (верхняя) граница\n",
-    "    return (round(lower_bound, rnd), round(upper_bound, rnd))"
+    "    return (round(lower_bound, rnd), round(upper_bound, rnd))\n",
+    "\n",
+    "\n",
+    "# Определение доверительного интервала пропорций\n",
+    "# с использованием z_crit\n",
+    "def proportions_conf_interval(n, x_p, gamma=0.95, rnd=2):   \n",
+    "    alpha = 1 - gamma # уровень значимости\n",
+    "    z_crit = -norm.ppf(alpha/2) # z критическое\n",
+    "    print(f'z_crit={round(z_crit,rnd)}')\n",
+    "    eps = z_crit * (x_p * (1 - x_p) / n) ** 0.5 #погрешность\n",
+    "    lower_bound = x_p - eps # левая (нижняя) граница\n",
+    "    upper_bound = x_p + eps # правая (верхняя) граница\n",
+    "    # возвращаем кортеж из округлённых границ интервала\n",
+    "    return round(lower_bound * 100, rnd), round(upper_bound * 100, rnd)\n",
+    "\n",
+    "\n",
+    "# доверительный интервал разници пропорций\n",
+    "def diff_proportions_conf_interval(n, xp, gamma=0.95, rnd=2):\n",
+    "    alpha = 1 - gamma # уровень значимости\n",
+    "    diff = xp[1] - xp[0] # выборочная разница конверсий групп B и A\n",
+    "    z_crit = -norm.ppf(alpha/2) # z критическое\n",
+    "    print(f'z_crit={round(z_crit,rnd)}')\n",
+    "    eps = z_crit * (xp[0] * (1 - xp[0])/n[0] + xp[1] * (1 - xp[1])/n[1]) ** 0.5 # погрешность\n",
+    "    lower_bound = diff - eps # левая (нижняя) граница\n",
+    "    upper_bound = diff + eps # правая (верхняя) граница\n",
+    "    # возвращаем кортеж из округлённых границ интервала\n",
+    "    return round(lower_bound *100, rnd), round(upper_bound * 100, rnd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +648,7 @@
        "(11.86, 12.84)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -642,13 +676,86 @@
        "(3146.5, 3933.5)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conf_t_interval(25, 3540, 1150, 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= 132/189"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z_crit=1.64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(64.35, 75.33)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proportions_conf_interval(189, a, 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1000, 1000]\n",
+    "b = [45/1000, 50/1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z_crit=1.96\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(-1.36, 2.36)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_proportions_conf_interval(a,b)"
    ]
   }
  ],
