--- a/Current_tasks/Template_EDA_5.ipynb
+++ b/Current_tasks/Template_EDA_5.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "id": "4503b528-412e-433a-bc03-da7da52fa1a3",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
     {
      "data": {
       "text/plain": [
-       "'Конверсия в группе А 2021-01-03:2    11.34\\nName: conversion, dtype: float64'"
+       "'Конверсия в группе А 2021-01-03: 11.34%'"
       ]
      },
      "metadata": {},
@@ -987,7 +987,7 @@
     {
      "data": {
       "text/plain": [
-       "'Конверсия в группе B 2021-01-03:3    11.39\\nName: conversion, dtype: float64'"
+       "'Конверсия в группе B 2021-01-03: 11.39%'"
       ]
      },
      "metadata": {},
@@ -996,7 +996,7 @@
     {
      "data": {
       "text/plain": [
-       "'Средний чек в группе А 2021-01-03:2    82888.0\\nName: mean_check, dtype: float64'"
+       "'Средний чек в группе А 2021-01-03: 82888 рублей'"
       ]
      },
      "metadata": {},
@@ -1005,7 +1005,7 @@
     {
      "data": {
       "text/plain": [
-       "'Средний чек в группе B 2021-01-03:3    87480.0\\nName: mean_check, dtype: float64'"
+       "'Средний чек в группе B 2021-01-03: 87480 рублей'"
       ]
      },
      "metadata": {},
@@ -1025,11 +1025,11 @@
     "\n",
     "display(grouped_data_upd.head(4))\n",
     "\n",
-    "display(f\"Конверсия в группе А 2021-01-03:{round(grouped_data_upd[((grouped_data_upd['date']=='2021-01-03')&(grouped_data_upd['group']=='A'))]['conversion']*100, 2)}\")\n",
-    "display(f\"Конверсия в группе B 2021-01-03:{round(grouped_data_upd[((grouped_data_upd['date']=='2021-01-03')&(grouped_data_upd['group']=='B'))]['conversion']*100, 2)}\")\n",
+    "display(f\"Конверсия в группе А 2021-01-03: {round(grouped_data_upd.iloc[2]['conversion']*100, 2)}%\")\n",
+    "display(f\"Конверсия в группе B 2021-01-03: {round(grouped_data_upd.iloc[3]['conversion']*100, 2)}%\")\n",
     "\n",
-    "display(f\"Средний чек в группе А 2021-01-03:{round(grouped_data_upd[((grouped_data_upd['date']=='2021-01-03')&(grouped_data_upd['group']=='A'))]['mean_check'])}\")\n",
-    "display(f\"Средний чек в группе B 2021-01-03:{round(grouped_data_upd[((grouped_data_upd['date']=='2021-01-03')&(grouped_data_upd['group']=='B'))]['mean_check'])}\")\n"
+    "display(f\"Средний чек в группе А 2021-01-03: {round(grouped_data_upd.iloc[2]['mean_check'])} рублей\")\n",
+    "display(f\"Средний чек в группе B 2021-01-03: {round(grouped_data_upd.iloc[3]['mean_check'])} рублей\")\n"
    ]
   },
   {
@@ -1181,7 +1181,7 @@
     }
    ],
    "source": [
-    "ваши выводы здесь"
+    "#ваши выводы здесь"
    ]
   },
   {
