--- a/Current_tasks/Template_EDA_5.ipynb
+++ b/Current_tasks/Template_EDA_5.ipynb
@@ -1146,7 +1146,7 @@
    "id": "f645f8e5-ad16-4b3b-8228-fbdeeb286833",
    "metadata": {},
    "source": [
-    "Выводы по заданию 7.9: По результатам анализа построенных графиков куммулятивных метрик среднего чека и конверсии можно сделать вывод, что со временем метрики стабилизировались - приближаются к горизонтальной прямой. А/В тест можно назвать завершенным."
+    "Выводы по заданию 7.9: По результатам анализа построенных графиков куммулятивных метрик среднего чека и конверсии можно сделать вывод, что со временем метрики стабилизировались - приближаются к горизонтальной прямой. А/В тест можно назвать завершенным. Куммулятивный показатель среднего чека по группе В превосходит соответствующий показатель по группе А на протяжении всего теста. Куммулятивный показатель конверсии по группе А в целом превосходит соответствующий показатель по группе В, хотя имеется однократная смена лидерства по данному показателю."
    ]
   },
   {
@@ -1366,12 +1366,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 156,
    "id": "898041ae-de7e-4b74-975e-111d494fbb82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Принимаем нулевую гипотезу. Распределения в обеих группах нормальные'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Ответ на контрольное задание 7.12\n"
+    "# Ответ на контрольное задание 7.12\n",
+    "H0 = 'Распределения в обеих группах нормальные'\n",
+    "H1 = 'Распределение в одной или обеих группах отлично от нормального'\n",
+    "alpha = 0.05\n",
+    "shapiro_a = shapiro(grouped_data_upd_a['mean_check'])\n",
+    "shapiro_b = shapiro(grouped_data_upd_b['mean_check'])\n",
+    "\n",
+    "if shapiro_a.pvalue<alpha or shapiro_b.pvalue<alpha:\n",
+    "    display(\"Отвергаем нулевую гипотезу. {}\".format(H0))\n",
+    "    display(\"Альтернативная гипотеза. H1: {}\".format(H1))\n",
+    "else:\n",
+    "    display(\"Принимаем нулевую гипотезу. {}\".format(H0))"
    ]
   },
   {
@@ -1395,12 +1416,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 159,
    "id": "05d43f23-2c2d-4795-bb96-1ffbfe81c391",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Отвергаем нулевую гипотезу Ежедневные средние чеки в группах А и В равны\n",
+      "Альтернативная гипотеза H1: Ежедневный средний чек в группе А меньше чем в группе В\n"
+     ]
+    }
+   ],
    "source": [
-    "# ваш код здесь"
+    "# Ответ на контрольное задание 7.13\n",
+    "\n",
+    "H0 = 'Ежедневные средние чеки в группах А и В равны'\n",
+    "H1 = 'Ежедневный средний чек в группе А меньше чем в группе В'\n",
+    "alpha = 0.05 #уровень значимости\n",
+    "\n",
+    "result = ttest_ind(\n",
+    "    a=grouped_data_upd_a['mean_check'],\n",
+    "    b=grouped_data_upd_b['mean_check'],\n",
+    "    alternative='less'\n",
+    ")\n",
+    "\n",
+    "if result.pvalue<alpha:\n",
+    "    print(\"Отвергаем нулевую гипотезу {}\".format(H0))\n",
+    "    print(\"Альтернативная гипотеза H1: {}\".format(H1))\n",
+    "else:\n",
+    "    print(\"Принимаем нулевую гипотезу. {}\".format(H0))"
    ]
   },
   {
@@ -1412,22 +1458,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "d8258dfd-14e7-4af4-bc6c-19ea8932eab5",
+   "cell_type": "markdown",
+   "id": "114284e2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_12924/3546990623.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_12924/3546990623.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    ваши выводы здесь\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "ваши выводы здесь"
+    "Выводы по заданию 7.13: По результатам проведенного т-теста можно сделать вывод о наличии статистической значимости между метриками среднего чека по группа (с заданным уровнем надежности). При этом средний чек по группе А меньше чем по группе В. Необходимо также построить доверительные интервалы."
    ]
   },
   {
@@ -1446,12 +1481,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "480430db-ffae-4aad-8e22-f5c70d4800b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Доверительный интервал для метрики среднего чека по группе А: (79630.0, 82308.0)'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Доверительный интервал для метрики среднего чека по группе B: (87626.0, 89526.0)'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# ваш код здесь"
+    "# Определение доверительного интервала для среднего значения\n",
+    "# с использованием t_crit\n",
+    "def conf_t_interval(n, x_mean, x_std, gamma=0.95, rnd=2):\n",
+    "    k = n - 1\n",
+    "    alpha = 1 - gamma\n",
+    "    t_crit = -t.ppf(alpha/2, k)\n",
+    "    eps = t_crit*x_std/(n**0.5)\n",
+    "    lower_bound = x_mean - eps # левая (нижняя) граница\n",
+    "    upper_bound = x_mean + eps # правая (верхняя) граница\n",
+    "    return (round(lower_bound, rnd), round(upper_bound, rnd))\n",
+    "\n",
+    "n_a = grouped_data_upd_a['date'].count()\n",
+    "x_mean_a = grouped_data_upd_a['mean_check'].mean()\n",
+    "x_std_a = grouped_data_upd_a['mean_check'].std()\n",
+    "\n",
+    "n_b = grouped_data_upd_b['date'].count()\n",
+    "x_mean_b = grouped_data_upd_b['mean_check'].mean()\n",
+    "x_std_b = grouped_data_upd_b['mean_check'].std()\n",
+    "\n",
+    "conf_t_interval_a = conf_t_interval(n_a, x_mean_a, x_std_a, rnd=0)\n",
+    "display('Доверительный интервал для метрики среднего чека по группе А: {}'.format(conf_t_interval_a))\n",
+    "\n",
+    "\n",
+    "conf_t_interval_b = conf_t_interval(n_b, x_mean_b, x_std_b, rnd=0)\n",
+    "display('Доверительный интервал для метрики среднего чека по группе B: {}'.format(conf_t_interval_b))\n",
+    "        "
    ]
   },
   {
@@ -1463,13 +1542,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ab3aad1-f4fd-485f-85ef-274a27fe7563",
+   "cell_type": "markdown",
+   "id": "817d185f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ваши выводы здесь"
+    "Выводы по заданию 7.14: По результатам построения доверительных интервалов метрики ежедневного среднего чека, можно сделать вывод о том, что средний чек по группе В превышает средний чек по группе А. Статистическая значимость подтверждается. Доверительные интервалеы не пересекаются."
    ]
   },
   {
@@ -1482,6 +1559,19 @@
     "## **Сделайте общий вывод по результатам A/B-теста**\n",
     "\n",
     "Какой варианта дизайна посадочной страницы является более эффективным в комплексе по метрикам конверсии и среднего чека и почему? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c88c2d72",
+   "metadata": {},
+   "source": [
+    "**Общий вывод по результатам А/В-теста**\n",
+    "\n",
+    "В рамках проведенного А/В-теста было проанализировано две метрики: конверсия и средний ежедневный чек. По результатам анализа полученных результатов сделаны следующие выводы:\n",
+    "- конверсия в группе А и группе В не имеет статистической значимости (при уровене надежности 95%);\n",
+    "- значение среднего ежедневного чека в группе В превышает соответствующий показатель по группе А. Разница статистически значима (при уровне надежности 95%)\n",
+    "В целом по результатам А/В-теста можно сделать вывод о том, что вариант страницы В является более эффективным, потому что при равной конверсии вариант В имеет более высокий показатель средненго ежедневного чека."
    ]
   }
  ],
