--- a/Current_tasks/EDA_6.ipynb
+++ b/Current_tasks/EDA_6.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import os\n",
@@ -21,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<FileHandler d:\\GitHub\\SF_DataScience\\Current_tasks\\data\\log_file.log (NOTSET)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Установка обработчика логирования\n",
     "logging.FileHandler('data/log_file.log')"
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +152,33 @@
     "\n",
     "logger.info(\"Percentage of men: {}\".format(df[df['No-show']=='Yes']['Gender'].value_counts(True)[1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COMET WARNING: As you are running in a Jupyter environment, you will need to call `experiment.end()` when finished to ensure all metrics and code are logged before exiting.\n",
+      "COMET INFO: Experiment is live on comet.ml https://www.comet.ml/poluboyarinovsi/medical-appointment/f7255e60bf0f476e8039d44f3d3951c9\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import comet_ml at the top of your file\n",
+    "from comet_ml import Experiment\n",
+    "\n",
+    "# Create an experiment with your api key\n",
+    "experiment = Experiment(\n",
+    "    api_key=\"6HsySCHNLMjdPl7WFU17AtVvT\",\n",
+    "    project_name=\"medical-appointment\",\n",
+    "    workspace=\"poluboyarinovsi\",\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -170,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
