--- a/project_3/EDA_Project_3_model.ipynb
+++ b/project_3/EDA_Project_3_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "2  48.845377  2.325643  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "Name: hotel_country, dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "Name: hotel_city, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,53 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_2188/3248521271.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotels['lat'][lat_mask & (hotels['hotel_city'] == 'Vienna')] = center_coordinates['Vienna'][0]\n",
-      "C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_2188/3248521271.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotels['lng'][lng_mask & (hotels['hotel_city'] == 'Vienna')] = center_coordinates['Vienna'][1]\n",
-      "C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_2188/3248521271.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotels['lat'][lat_mask & (hotels['hotel_city'] == 'Barcelona')] = center_coordinates['Barcelona'][0]\n",
-      "C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_2188/3248521271.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotels['lng'][lng_mask & (hotels['hotel_city'] == 'Barcelona')] = center_coordinates['Barcelona'][1]\n",
-      "C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_2188/3248521271.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotels['lat'][lat_mask & (hotels['hotel_city'] == 'Paris')] = center_coordinates['Paris'][0]\n",
-      "C:\\Users\\polub\\AppData\\Local\\Temp/ipykernel_2188/3248521271.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotels['lng'][lng_mask & (hotels['hotel_city'] == 'Paris')] = center_coordinates['Paris'][1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hotels['lat'][lat_mask & (hotels['hotel_city'] == 'Vienna')] = center_coordinates['Vienna'][0]\n",
-    "hotels['lng'][lng_mask & (hotels['hotel_city'] == 'Vienna')] = center_coordinates['Vienna'][1]\n",
-    "hotels['lat'][lat_mask & (hotels['hotel_city'] == 'Barcelona')] = center_coordinates['Barcelona'][0]\n",
-    "hotels['lng'][lng_mask & (hotels['hotel_city'] == 'Barcelona')] = center_coordinates['Barcelona'][1]\n",
-    "hotels['lat'][lat_mask & (hotels['hotel_city'] == 'Paris')] = center_coordinates['Paris'][0]\n",
-    "hotels['lng'][lng_mask & (hotels['hotel_city'] == 'Paris')] = center_coordinates['Paris'][1]"
+    "hotels.loc[(lat_mask & (hotels['hotel_city'] == 'Vienna')), 'lat'] = center_coordinates['Vienna'][0]\n",
+    "hotels.loc[(lng_mask & (hotels['hotel_city'] == 'Vienna')), 'lng'] = center_coordinates['Vienna'][1]\n",
+    "hotels.loc[(lat_mask & (hotels['hotel_city'] == 'Barcelona')), 'lat'] = center_coordinates['Barcelona'][0]\n",
+    "hotels.loc[(lng_mask & (hotels['hotel_city'] == 'Barcelona')), 'lng'] = center_coordinates['Barcelona'][1]\n",
+    "hotels.loc[(lat_mask & (hotels['hotel_city'] == 'Paris')), 'lat'] = center_coordinates['Paris'][0]\n",
+    "hotels.loc[(lng_mask & (hotels['hotel_city'] == 'Paris')), 'lng'] = center_coordinates['Paris'][1]"
    ]
   },
   {
