--- a/Current_tasks/ML_3.ipynb
+++ b/Current_tasks/ML_3.ipynb
@@ -25,6 +25,282 @@
     "    random_state=42\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Понижение размерности"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Метод главных компонент (РСА)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# загрузим датасет MNIST\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = fetch_openml(\"mnist_784\")\n",
+    "\n",
+    "X = dataset['data']\n",
+    "y = dataset['target']\n",
+    "\n",
+    "train_x, train_y, test_x, test_y = train_test_split(X, y, test_size=0.1, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x, test_x, train_y, test_y = train_test_split(X, y, test_size=0.1, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# создадим объект класса StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(train_x)\n",
+    "# трансформируем датасеты train_x и test_x\n",
+    "train_x = scaler.transform(train_x)\n",
+    "test_x = scaler.transform(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=300)\n",
+    "pca.fit(train_x)\n",
+    "\n",
+    "train_x_pca = pca.transform(train_x)\n",
+    "test_x_pca = pca.transform(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "784\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_x[0]))\n",
+    "print(len(train_x_pca[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обучим модель логистической регрессии, которая на вход будет принимать пиксели изображения и предсказывать, что на нём нарисовано.\n",
+    "\n",
+    "Напишем функцию, которая будет принимать на вход данные для обучения (матрицу с признаками и правильные ответы) и данные для тестирования модели, а на выходе будет возвращать время, затраченное на обучение модели, и качество модели. В качестве метрики оценивания качества будем использовать метрику accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Модель, построенная на признаках, полученных после уменьшения размерности. Время обучения 149.17400074005127, метрика модели 0.9247142857142857\n",
+      "Модель, построенная на всех исходных признаках. Время обучения 332.7962348461151, метрика модели 0.9187142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# напишем функцию, которая на вход принимает X и y, а возвращает модель и время\n",
+    "def get_time_and_accuracy(train_x, train_y, test_x, test_y):\n",
+    "    # создадим объект класса LogisticRegression\n",
+    "    log_reg_model = LogisticRegression(max_iter=1000)\n",
+    "    from time import time\n",
+    "    # запишем время с начала эпохи в секундах до обучения модели\n",
+    "    start_time = time()\n",
+    "    # обучим модель\n",
+    "    log_reg_model.fit(train_x, train_y)    \n",
+    "    # запишем время с начала эпохи в секундах после обучения\n",
+    "    end_time = time()\n",
+    "    # подсчитаем время, потраченное на обучение модели\n",
+    "    time = end_time-start_time\n",
+    "    # предскажем на тестовых данных\n",
+    "    y_pred = log_reg_model.predict(test_x)\n",
+    "    # посчитаем скор для тестового предсказания\n",
+    "    score = accuracy_score(test_y, y_pred)\n",
+    "    # вернём время, потраченное на обучение, и качество полученной модели\n",
+    "    return time, score\n",
+    "\n",
+    "model_pca_time, model_pca_acc = get_time_and_accuracy(train_x_pca, train_y, test_x_pca, test_y)\n",
+    "print(f\"Модель, построенная на признаках, полученных после уменьшения размерности. Время обучения {model_pca_time}, метрика модели {model_pca_acc}\")\n",
+    "\n",
+    "model_time, model_acc = get_time_and_accuracy(train_x, train_y, test_x, test_y)\n",
+    "print(f\"Модель, построенная на всех исходных признаках. Время обучения {model_time}, метрика модели {model_acc}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Стохастическое вложение соседей (t-SNE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.manifold import TSNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Пользователь\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:795: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Пользователь\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:805: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'TSNE' object has no attribute 'transform'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\SkillFactory\\SF_DataScience\\Current_tasks\\ML_3.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/Current_tasks/ML_3.ipynb#ch0000020?line=4'>5</a>\u001b[0m tsne\u001b[39m.\u001b[39mfit(X)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/Current_tasks/ML_3.ipynb#ch0000020?line=5'>6</a>\u001b[0m \u001b[39m# применяем уменьшение размерности к матрице X\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/SkillFactory/SF_DataScience/Current_tasks/ML_3.ipynb#ch0000020?line=6'>7</a>\u001b[0m tsne\u001b[39m.\u001b[39;49mtransform(X)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TSNE' object has no attribute 'transform'"
+     ]
+    }
+   ],
+   "source": [
+    "# создаём объект класса TSNE\n",
+    "# n_components — размерность нового пространства\n",
+    "tsne = TSNE(n_components=2, perplexity=30, n_iter=500, random_state=42)\n",
+    "# обучаем модель на данных X\n",
+    "tsne.fit(X)\n",
+    "# применяем уменьшение размерности к матрице X\n",
+    "tsne.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Важные параметры для запуска:\n",
+    "\n",
+    "n_components — размерность нового пространства.\n",
+    "perplexity — один из важнейших параметров для запуска. Этот параметр описывает ожидаемую плотность вокруг точки. Таким образом мы можем устанавливать соотношение ближайших соседей к точке. Если датасет большой, стоит установить большее значение perplexity. Обычно используют значения в диапазоне от 5 до 50.\n",
+    "n_iter — количество итераций для оптимизации.\n",
+    "random_state — так как в алгоритме есть случайность, задание random_state позволяет от запуска к запуску получать одинаковые результаты."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "# создадим объект класса PCA, уменьшим размерность данных до 2\n",
+    "pca = PCA(n_components=2, random_state=42)\n",
+    "\n",
+    "# уменьшим размерность данных\n",
+    "X_reduced = pca.fit_transform(train_x)\n",
+    "# сохраним данные в датафрейм\n",
+    "df_pca = pd.DataFrame(X_reduced)\n",
+    "# сохраним разметки кластеров\n",
+    "df_pca['c'] = pd.to_numeric(train_y).astype('Int64').to_list()\n",
+    "# визуализируем\n",
+    "sns.scatterplot(x=df_pca[0], y=df_pca[1], c=df_pca['c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# создадим объект класса TSNE, уменьшим размерность данных до 2\n",
+    "tsne = TSNE(n_components=2, perplexity=50, n_iter=500, random_state=42)\n",
+    "# немного уменьшим количество объектов для уменьшения размерности, иначе алгоритм будет работать очень долго\n",
+    "X_reduced = tsne.fit_transform(train_x)\n",
+    "# сохраним данные в датафрейм\n",
+    "df_tsne = pd.DataFrame(X_reduced)\n",
+    "# сохраним разметки кластеров\n",
+    "df_tsne['c'] = pd.to_numeric(train_y).astype('Int64').to_list()\n",
+    "sns.scatterplot(x=df_tsne[0], y=df_tsne[1], c=df_tsne['c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
