--- a/Current_tasks/Python_14.ipynb
+++ b/Current_tasks/Python_14.ipynb
@@ -62659,20 +62659,18 @@
     "    outliers = data[(x<lower_bound) | (x > upper_bound)]\n",
     "    cleaned = data[(x>lower_bound) & (x < upper_bound)]\n",
     "    return outliers, cleaned\n",
-    "    \n",
+    "\n",
     "\n",
     "outliers, cleaned = outliers_iqr_mod(sber_data, 'full_sq', left=1, right=6)\n",
     "print(f'Число выбросов по методу Тьюки: {outliers.shape[0]}')\n",
     "print(f'Результирующее число записей: {cleaned.shape[0]}')\n",
     "\n",
     "\n",
-    "\n",
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(15, 4))\n",
     "histplot = sns.histplot(data=cleaned, x='full_sq', ax=axes[0]);\n",
     "histplot.set_title('Cleaned Full Square Distribution');\n",
     "boxplot = sns.boxplot(data=cleaned, x='full_sq', ax=axes[1]);\n",
-    "boxplot.set_title('Cleaned Full Square Boxplot');\n",
-    "\n"
+    "boxplot.set_title('Cleaned Full Square Boxplot');\n"
    ]
   },
   {
@@ -63330,11 +63328,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ed0d0c232d8cfb85f8b9627b989aa227e3f10509477ed496070cceb81a64ee7d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('sf': conda)",
+   "display_name": "Python 3.10.4 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -63348,9 +63343,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c97e36f5c1aa02871b4149eafcab2ec871d39d20911a3254ab29c2172503796d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
