--- a/Current_tasks/Python_13.ipynb
+++ b/Current_tasks/Python_13.ipynb
@@ -643,11 +643,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ed0d0c232d8cfb85f8b9627b989aa227e3f10509477ed496070cceb81a64ee7d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('sf': conda)",
+   "display_name": "Python 3.10.4 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -661,9 +658,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c97e36f5c1aa02871b4149eafcab2ec871d39d20911a3254ab29c2172503796d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
