--- a/Current_tasks/EDA_5_Practice.ipynb
+++ b/Current_tasks/EDA_5_Practice.ipynb
@@ -1577,7 +1577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -1591,7 +1591,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c97e36f5c1aa02871b4149eafcab2ec871d39d20911a3254ab29c2172503796d"
+   }
   }
  },
  "nbformat": 4,
